# shell-monad

./: .gitignore  CHANGELOG  README  cabal.project  flake.nix  hie.yaml  shell-monad.cabal
Control/Monad/: Shell.hs
examples/: fib.hs  hello.hs  protocol.hs  santa.hs
src/Control/Monad/: Shell.hs
src/Control/Monad/Shell/: Quote.hs
