Cabal-Version: 2.4
Name: shell-monad
Version: 0.6.10
License: BSD-3-Clause
Maintainer: Joey Hess <id@joeyh.name>
Author: Joey Hess
Stability: Stable
Copyright: 2014 Joey Hess
License-File: LICENSE
Build-Type: Simple
Category: Compilers/Interpreters
Synopsis: shell monad
Description:
 This is a shell monad, for generating shell scripts.
Extra-Source-Files:
  CHANGELOG
  TODO

Library
  Default-Language: Haskell2010
  GHC-Options: -Wall -fno-warn-tabs
  hs-source-dirs:   src
  Exposed-Modules:
    Control.Monad.Shell
    Control.Monad.Shell.Quote
  Build-Depends: base >= 4.11 && < 5
               , containers
               , text
               , unix

executable hello
  Default-Language: Haskell2010
  hs-source-dirs:      examples
  main-is:             hello.hs
  other-modules:       Paths_shell_monad
  build-depends:       shell-monad
                     , base >= 4.11 && < 5
                     , containers
                     , text
                     , unix
  GHC-Options: -Wall -fno-warn-tabs

executable fib
  Default-Language: Haskell2010
  hs-source-dirs:      examples
  main-is:             fib.hs
  other-modules:       Paths_shell_monad
  build-depends:       shell-monad
                     , base >= 4.11 && < 5
                     , containers
                     , text
                     , unix
  GHC-Options: -Wall -fno-warn-tabs

executable protocol
  Default-Language: Haskell2010
  hs-source-dirs:      examples
  main-is:             protocol.hs
  other-modules:       Paths_shell_monad
  build-depends:       shell-monad
                     , base >= 4.11 && < 5
                     , containers
                     , text
                     , unix
  GHC-Options: -Wall -fno-warn-tabs

executable santa
  Default-Language: Haskell2010
  hs-source-dirs:      examples
  main-is:             santa.hs
  other-modules:       Paths_shell_monad
  build-depends:       shell-monad
                     , base >= 4.11 && < 5
                     , containers
                     , text
                     , unix
  GHC-Options: -Wall -fno-warn-tabs

source-repository head
  type: git
  location: https://github.com/hughjfchen/shell-monad.git
